# LongBEL

./: .gitignore  .gitmodules  LICENSE  README.md  download_resources.sh  pyproject.toml
data/corrected_code/: QUAERO_2014_adapted.csv
longbel/: __init__.py  error_analysis.py  guided_inference.py  llm_as_a_judge.py  longbel.py  longbel_all_in_one.py  models.py  parse_data.py  parse_data_long.py  utils.py
notebooks/: analysis.ipynb  evaluate_bi_encoder.ipynb  sandbox.ipynb  test_ner_finetuning.ipynb
scripts/: 7_evaluate_scispacy.py  8_evaluate_embedding.py
scripts/1_preprocess_UMLS/: README.md  extract_umls_data.py  prepare_umls_data.py  run_extract_and_prepare_umls.py
scripts/1_preprocess_termino/: README.md  prepare_snomed.py  prepare_umls.py  run_extract_and_prepare_termino.py
scripts/1a_preprocess_UMLS/: README.md  extract_umls_data.py  prepare_umls_data.py  run_extract_and_prepare_umls.py
scripts/1b_preprocess_SPACCC/: README.md  prepare_corpus.py  prepare_terminology.py
scripts/2_generate_synthetic_data/: README.md  convert_to_bigbio.py  generate.py  generate.sh  generate.slurm  generate_slurm.sh  generate_slurm.slurm  prepare_concepts.py  run_generate.sh
scripts/2_prepare_data/: README.md  run.py
scripts/3_prepare_data/: README.md  generate_embeddings.py  run.py  run.slurm
scripts/3_training_decoder/: build_oof_memory_dataset.py  run_all_trainings.sh
scripts/3a_prepare_data_seq2seq/: run.py  run.slurm
scripts/3b_prepare_data_encoder/: README.md  run.py
scripts/3c_preprocess_SPACCC/: README.md  prepare_corpus.py  prepare_terminology.py  run.sh
scripts/4_inference/: run.slurm  run_all_inferences.sh
scripts/4_training/: 4_train_v2.py  run.slurm  run_all_trainings.sh  train.py
scripts/4_training_decoder/: README.md  build_mem_data.slurm  build_oof_memory_dataset.py  run.slurm  run_all_trainings.sh  train.py
scripts/4_training_seq2seq/: README.md  run.slurm  run_all_trainings.sh  train.py
scripts/4a_training_seq2seq/: README.md  run.slurm  run_all_trainings.sh  train.py
syncabel/: embeddings.py  error_analysis.py  evaluation.py  guided_inference.py  llm_as_a_judge.py  models.py  parse_data.py  parse_data_v2.py  trie.py  utils.py
(+143 files in other folders)
