[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "syncabel"
version = "0.1.0"
description = "SynCABEL: Synthetic Contextualized Augmentation for Biomedical Entity Linking"
readme = "README.md"
license = {file = "LICENSE"}
authors = [
    {name = "Adam REMAKI", email = "ad.remaki@gmail.com"},
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
]
requires-python = ">=3.9"
dependencies = [
    # Core ML libraries
    "torch>=2.0.0",
    "transformers>=4.50.0",
    "trl>=0.4.5",
    "datasets>=2.0.0",
    "numpy>=1.21.0",
    # Data processing
    "pandas>=1.3.0",
    "nltk>=3.7",
    "tqdm>=4.64.0",
    # Development tools
    "ruff>=0.12.7",
    "polars>=1.32.0",
    "pip>=25.2",
    "unidecode>=1.4.0",
    "owlready2>=0.49",
    "ipykernel>=6.31.0",
    "typer>=0.20.0",
    "openai>=2.13.0",
    "scikit-learn>=1.6.1",
]

[project.optional-dependencies]
scipacy = [
    "spacy>=3.4.0",
    "scispacy>=0.6.0",
]

[project.urls]
Repository = "https://github.com/anonymous/syncabel"

[tool.ruff]
# Enable pycodestyle (`E`) and Pyflakes (`F`) codes by default.
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # Pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
]
ignore = [
    "E501",  # line too long, handled by black
    "B008",  # do not perform function calls in argument defaults
    "C901",  # too complex
]

# Same as Black.
line-length = 88

[tool.ruff.isort]
known-first-party = ["syncabel"]

[tool.hatch.metadata]
allow-direct-references = true
